src/test/deca/syntax/invalid/lexer/reserved_words_lex-lex.corr
ASM: [@0,222:224='asm',<25>,13:0]
CLASS: [@1,226:230='class',<26>,14:0]
EXTENDS: [@2,232:238='extends',<27>,15:0]
ELSE: [@3,240:243='else',<28>,16:0]
FALSE: [@4,245:249='false',<29>,17:0]
IF: [@5,251:252='if',<30>,18:0]
INSTANCEOF: [@6,254:263='instanceof',<31>,19:0]
NEW: [@7,265:267='new',<32>,20:0]
NULL: [@8,269:272='null',<33>,21:0]
READINT: [@9,274:280='readInt',<34>,22:0]
READFLOAT: [@10,282:290='readFloat',<35>,23:0]
PRINT: [@11,292:296='print',<36>,24:0]
PRINTLN: [@12,298:304='println',<37>,25:0]
PRINTLNX: [@13,306:313='printlnx',<38>,26:0]
PRINTX: [@14,315:320='printx',<39>,27:0]
PROTECTED: [@15,322:330='protected',<40>,28:0]
RETURN: [@16,332:337='return',<41>,29:0]
THIS: [@17,339:342='this',<42>,30:0]
TRUE: [@18,344:347='true',<43>,31:0]
WHILE: [@19,349:353='while',<44>,32:0]
ASM: [@20,373:375='asm',<25>,35:0]
ASM: [@21,377:379='asm',<25>,35:4]
IDENT: [@22,381:386='asmasm',<47>,36:0]
ASM: [@23,388:390='asm',<25>,37:0]
PLUS: [@24,391:391='+',<5>,37:3]
ASM: [@25,392:394='asm',<25>,37:4]
IDENT: [@26,396:402='elselse',<47>,38:0]
IDENT: [@27,404:406='els',<47>,39:0]
ELSE: [@28,408:411='else',<28>,39:4]
